--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet-async": "^2.0.5",
     "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.13",
     "three": "^0.180.0"
@@ -30,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
-    "vite": "^7.1.6"
+    "vite": "^7.1.6",
+    "vite-plugin-sitemap": "^0.8.2"
   }
 }
